@@ -41,6 +41,16 @@ The following is a list of deprecated interfaces.
      - 4.0
      - ``sphinx.io.SphinxStandaloneReader.setup()``
 
+   * - ``sphinx.util.texescape.tex_escape_map``
+     - 2.3
+     - 4.0
+     - ``sphinx.util.texescape.get_escape_func()``
+
+   * - ``sphinx.util.texescape.tex_hl_escape_map_new``
+     - 2.3
+     - 4.0
+     - ``sphinx.util.texescape.get_hlescape_func()``
+
    * - ``sphinx.domains.math.MathDomain.add_equation()``
      - 2.2
      - 4.0
